force-app/main/default/objects/AR_Quick_Link__mdt/AR_Quick_Link__mdt.object-meta.xml
<CustomObject>
    <description>SFP-12126 Setting used to define value &amp; accessibility for the Quick Links section on Home page.</description>
    <label>AR Quick Link</label>
    <pluralLabel>AR Quick Links</pluralLabel>
</CustomObject>