force-app/main/default/objects/AR_Quick_Link__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <description>SFP-12126 Manage icons for Quick Links section on Home page.</description>
    <label>Icon</label>
    <length>64</length>
    <type>Text</type>
</CustomField>