force-app/main/default/objects/AR_Quick_Link__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>SFP-12126 Manage labels for the Quick Links on Home page.</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>