force-app/main/default/objects/AR_Quick_Link__mdt/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>SFP-12126 Manage links for the Quick Links on Home page.</description>
    <label>Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>