force-app/main/default/objects/AR_Quick_Link__mdt/fields/Show_for_Profile__c.field-meta.xml
<CustomField>
    <fullName>Show_for_Profile__c</fullName>
    <description>SFP-12126 Manage which profiles can access Quick Links on Home page.</description>
    <label>Show for Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>